# bevy-webgpu

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
assets/shaders/: animate_shader.wgsl  compute_shader.wgsl
src/: compute.rs  index.css  main.rs  main.ts  shader_reload.rs
