[package]
name = "bevy-webgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.1"
bevy_panorbit_camera = "0.19.2"
lazy_static = "1.5.0"
wasm-bindgen = "0.2.93"

[[example]]
name = "atmospheric_fog"
path = "src/atmospheric_fog.rs"

[[example]]
name = "volumetric_fog"
path = "src/volumetric_fog.rs"
